@@ -1,353 +1,0 @@
-.gitattributes
-.github/workflows/linux-ubuntu-latest-perl-v5.20.3.yml
-.github/workflows/linux-ubuntu-latest.yml
-.github/workflows/macos-latest.yml
-.github/workflows/windows-latest.yml
-.gitignore
-Changes
-DEVELOPMENT.txt
-helper/constants.txt
-helper/DER_type_names.txt
-helper/generate_Constant.pl
-helper/generate_DER.pl
-lib/SPVM/Net/SSLeay.c
-lib/SPVM/Net/SSLeay.config
-lib/SPVM/Net/SSLeay.pm
-lib/SPVM/Net/SSLeay.spvm
-lib/SPVM/Net/SSLeay/ASN1_ENUMERATED.c
-lib/SPVM/Net/SSLeay/ASN1_ENUMERATED.config
-lib/SPVM/Net/SSLeay/ASN1_ENUMERATED.pm
-lib/SPVM/Net/SSLeay/ASN1_ENUMERATED.spvm
-lib/SPVM/Net/SSLeay/ASN1_GENERALIZEDTIME.c
-lib/SPVM/Net/SSLeay/ASN1_GENERALIZEDTIME.config
-lib/SPVM/Net/SSLeay/ASN1_GENERALIZEDTIME.pm
-lib/SPVM/Net/SSLeay/ASN1_GENERALIZEDTIME.spvm
-lib/SPVM/Net/SSLeay/ASN1_INTEGER.c
-lib/SPVM/Net/SSLeay/ASN1_INTEGER.config
-lib/SPVM/Net/SSLeay/ASN1_INTEGER.pm
-lib/SPVM/Net/SSLeay/ASN1_INTEGER.spvm
-lib/SPVM/Net/SSLeay/ASN1_OBJECT.c
-lib/SPVM/Net/SSLeay/ASN1_OBJECT.config
-lib/SPVM/Net/SSLeay/ASN1_OBJECT.pm
-lib/SPVM/Net/SSLeay/ASN1_OBJECT.spvm
-lib/SPVM/Net/SSLeay/ASN1_OCTET_STRING.c
-lib/SPVM/Net/SSLeay/ASN1_OCTET_STRING.config
-lib/SPVM/Net/SSLeay/ASN1_OCTET_STRING.pm
-lib/SPVM/Net/SSLeay/ASN1_OCTET_STRING.spvm
-lib/SPVM/Net/SSLeay/ASN1_STRING.c
-lib/SPVM/Net/SSLeay/ASN1_STRING.config
-lib/SPVM/Net/SSLeay/ASN1_STRING.pm
-lib/SPVM/Net/SSLeay/ASN1_STRING.spvm
-lib/SPVM/Net/SSLeay/ASN1_TIME.c
-lib/SPVM/Net/SSLeay/ASN1_TIME.config
-lib/SPVM/Net/SSLeay/ASN1_TIME.pm
-lib/SPVM/Net/SSLeay/ASN1_TIME.spvm
-lib/SPVM/Net/SSLeay/BIO.c
-lib/SPVM/Net/SSLeay/BIO.config
-lib/SPVM/Net/SSLeay/BIO.pm
-lib/SPVM/Net/SSLeay/BIO.spvm
-lib/SPVM/Net/SSLeay/Callback/AlpnSelect.pm
-lib/SPVM/Net/SSLeay/Callback/AlpnSelect.spvm
-lib/SPVM/Net/SSLeay/Callback/Msg.pm
-lib/SPVM/Net/SSLeay/Callback/Msg.spvm
-lib/SPVM/Net/SSLeay/Callback/NewSession.pm
-lib/SPVM/Net/SSLeay/Callback/NewSession.spvm
-lib/SPVM/Net/SSLeay/Callback/NextProtosAdvertised.pm
-lib/SPVM/Net/SSLeay/Callback/NextProtosAdvertised.spvm
-lib/SPVM/Net/SSLeay/Callback/NextProtoSelect.pm
-lib/SPVM/Net/SSLeay/Callback/NextProtoSelect.spvm
-lib/SPVM/Net/SSLeay/Callback/PemPassword.pm
-lib/SPVM/Net/SSLeay/Callback/PemPassword.spvm
-lib/SPVM/Net/SSLeay/Callback/PskClient.pm
-lib/SPVM/Net/SSLeay/Callback/PskClient.spvm
-lib/SPVM/Net/SSLeay/Callback/PskServer.pm
-lib/SPVM/Net/SSLeay/Callback/PskServer.spvm
-lib/SPVM/Net/SSLeay/Callback/RemoveSession.pm
-lib/SPVM/Net/SSLeay/Callback/RemoveSession.spvm
-lib/SPVM/Net/SSLeay/Callback/TlsextServername.pm
-lib/SPVM/Net/SSLeay/Callback/TlsextServername.spvm
-lib/SPVM/Net/SSLeay/Callback/TlsextStatus.pm
-lib/SPVM/Net/SSLeay/Callback/TlsextStatus.spvm
-lib/SPVM/Net/SSLeay/Callback/TlsextTicketKey.pm
-lib/SPVM/Net/SSLeay/Callback/TlsextTicketKey.spvm
-lib/SPVM/Net/SSLeay/Callback/Verify.pm
-lib/SPVM/Net/SSLeay/Callback/Verify.spvm
-lib/SPVM/Net/SSLeay/ConfigBuilder.pm
-lib/SPVM/Net/SSLeay/Constant.c
-lib/SPVM/Net/SSLeay/Constant.config
-lib/SPVM/Net/SSLeay/Constant.pm
-lib/SPVM/Net/SSLeay/Constant.spvm
-lib/SPVM/Net/SSLeay/DER.c
-lib/SPVM/Net/SSLeay/DER.config
-lib/SPVM/Net/SSLeay/DER.pm
-lib/SPVM/Net/SSLeay/DER.spvm
-lib/SPVM/Net/SSLeay/DH.c
-lib/SPVM/Net/SSLeay/DH.config
-lib/SPVM/Net/SSLeay/DH.pm
-lib/SPVM/Net/SSLeay/DH.spvm
-lib/SPVM/Net/SSLeay/EC_KEY.c
-lib/SPVM/Net/SSLeay/EC_KEY.config
-lib/SPVM/Net/SSLeay/EC_KEY.pm
-lib/SPVM/Net/SSLeay/EC_KEY.spvm
-lib/SPVM/Net/SSLeay/ERR.c
-lib/SPVM/Net/SSLeay/ERR.config
-lib/SPVM/Net/SSLeay/ERR.pm
-lib/SPVM/Net/SSLeay/ERR.spvm
-lib/SPVM/Net/SSLeay/Error.pm
-lib/SPVM/Net/SSLeay/Error.spvm
-lib/SPVM/Net/SSLeay/Error/PEM_R_NO_START_LINE.pm
-lib/SPVM/Net/SSLeay/Error/PEM_R_NO_START_LINE.spvm
-lib/SPVM/Net/SSLeay/EVP.c
-lib/SPVM/Net/SSLeay/EVP.config
-lib/SPVM/Net/SSLeay/EVP.pm
-lib/SPVM/Net/SSLeay/EVP.spvm
-lib/SPVM/Net/SSLeay/EVP_CIPHER_CTX.c
-lib/SPVM/Net/SSLeay/EVP_CIPHER_CTX.config
-lib/SPVM/Net/SSLeay/EVP_CIPHER_CTX.pm
-lib/SPVM/Net/SSLeay/EVP_CIPHER_CTX.spvm
-lib/SPVM/Net/SSLeay/EVP_MD.c
-lib/SPVM/Net/SSLeay/EVP_MD.config
-lib/SPVM/Net/SSLeay/EVP_MD.pm
-lib/SPVM/Net/SSLeay/EVP_MD.spvm
-lib/SPVM/Net/SSLeay/EVP_PKEY.c
-lib/SPVM/Net/SSLeay/EVP_PKEY.config
-lib/SPVM/Net/SSLeay/EVP_PKEY.pm
-lib/SPVM/Net/SSLeay/EVP_PKEY.spvm
-lib/SPVM/Net/SSLeay/GENERAL_NAME.c
-lib/SPVM/Net/SSLeay/GENERAL_NAME.config
-lib/SPVM/Net/SSLeay/GENERAL_NAME.pm
-lib/SPVM/Net/SSLeay/GENERAL_NAME.spvm
-lib/SPVM/Net/SSLeay/HMAC_CTX.c
-lib/SPVM/Net/SSLeay/HMAC_CTX.config
-lib/SPVM/Net/SSLeay/HMAC_CTX.pm
-lib/SPVM/Net/SSLeay/HMAC_CTX.spvm
-lib/SPVM/Net/SSLeay/OBJ.c
-lib/SPVM/Net/SSLeay/OBJ.config
-lib/SPVM/Net/SSLeay/OBJ.pm
-lib/SPVM/Net/SSLeay/OBJ.spvm
-lib/SPVM/Net/SSLeay/OPENSSL.c
-lib/SPVM/Net/SSLeay/OPENSSL.config
-lib/SPVM/Net/SSLeay/OPENSSL.pm
-lib/SPVM/Net/SSLeay/OPENSSL.spvm
-lib/SPVM/Net/SSLeay/OPENSSL_INIT.c
-lib/SPVM/Net/SSLeay/OPENSSL_INIT.config
-lib/SPVM/Net/SSLeay/OPENSSL_INIT.pm
-lib/SPVM/Net/SSLeay/OPENSSL_INIT.spvm
-lib/SPVM/Net/SSLeay/OPENSSL_INIT_SETTINGS.c
-lib/SPVM/Net/SSLeay/OPENSSL_INIT_SETTINGS.config
-lib/SPVM/Net/SSLeay/OPENSSL_INIT_SETTINGS.pm
-lib/SPVM/Net/SSLeay/OPENSSL_INIT_SETTINGS.spvm
-lib/SPVM/Net/SSLeay/PEM.c
-lib/SPVM/Net/SSLeay/PEM.config
-lib/SPVM/Net/SSLeay/PEM.pm
-lib/SPVM/Net/SSLeay/PEM.spvm
-lib/SPVM/Net/SSLeay/PKCS12.c
-lib/SPVM/Net/SSLeay/PKCS12.config
-lib/SPVM/Net/SSLeay/PKCS12.pm
-lib/SPVM/Net/SSLeay/PKCS12.spvm
-lib/SPVM/Net/SSLeay/RAND.c
-lib/SPVM/Net/SSLeay/RAND.config
-lib/SPVM/Net/SSLeay/RAND.pm
-lib/SPVM/Net/SSLeay/RAND.spvm
-lib/SPVM/Net/SSLeay/SSL_CTX.c
-lib/SPVM/Net/SSLeay/SSL_CTX.config
-lib/SPVM/Net/SSLeay/SSL_CTX.pm
-lib/SPVM/Net/SSLeay/SSL_CTX.spvm
-lib/SPVM/Net/SSLeay/SSL_METHOD.c
-lib/SPVM/Net/SSLeay/SSL_METHOD.config
-lib/SPVM/Net/SSLeay/SSL_METHOD.pm
-lib/SPVM/Net/SSLeay/SSL_METHOD.spvm
-lib/SPVM/Net/SSLeay/SSL_SESSION.c
-lib/SPVM/Net/SSLeay/SSL_SESSION.config
-lib/SPVM/Net/SSLeay/SSL_SESSION.pm
-lib/SPVM/Net/SSLeay/SSL_SESSION.spvm
-lib/SPVM/Net/SSLeay/Util.c
-lib/SPVM/Net/SSLeay/Util.config
-lib/SPVM/Net/SSLeay/Util.pm
-lib/SPVM/Net/SSLeay/Util.spvm
-lib/SPVM/Net/SSLeay/X509.c
-lib/SPVM/Net/SSLeay/X509.config
-lib/SPVM/Net/SSLeay/X509.pm
-lib/SPVM/Net/SSLeay/X509.spvm
-lib/SPVM/Net/SSLeay/X509_CRL.c
-lib/SPVM/Net/SSLeay/X509_CRL.config
-lib/SPVM/Net/SSLeay/X509_CRL.pm
-lib/SPVM/Net/SSLeay/X509_CRL.spvm
-lib/SPVM/Net/SSLeay/X509_EXTENSION.c
-lib/SPVM/Net/SSLeay/X509_EXTENSION.config
-lib/SPVM/Net/SSLeay/X509_EXTENSION.pm
-lib/SPVM/Net/SSLeay/X509_EXTENSION.spvm
-lib/SPVM/Net/SSLeay/X509_NAME.c
-lib/SPVM/Net/SSLeay/X509_NAME.config
-lib/SPVM/Net/SSLeay/X509_NAME.pm
-lib/SPVM/Net/SSLeay/X509_NAME.spvm
-lib/SPVM/Net/SSLeay/X509_NAME_ENTRY.c
-lib/SPVM/Net/SSLeay/X509_NAME_ENTRY.config
-lib/SPVM/Net/SSLeay/X509_NAME_ENTRY.pm
-lib/SPVM/Net/SSLeay/X509_NAME_ENTRY.spvm
-lib/SPVM/Net/SSLeay/X509_REVOKED.c
-lib/SPVM/Net/SSLeay/X509_REVOKED.config
-lib/SPVM/Net/SSLeay/X509_REVOKED.pm
-lib/SPVM/Net/SSLeay/X509_REVOKED.spvm
-lib/SPVM/Net/SSLeay/X509_STORE.c
-lib/SPVM/Net/SSLeay/X509_STORE.config
-lib/SPVM/Net/SSLeay/X509_STORE.pm
-lib/SPVM/Net/SSLeay/X509_STORE.spvm
-lib/SPVM/Net/SSLeay/X509_STORE_CTX.c
-lib/SPVM/Net/SSLeay/X509_STORE_CTX.config
-lib/SPVM/Net/SSLeay/X509_STORE_CTX.pm
-lib/SPVM/Net/SSLeay/X509_STORE_CTX.spvm
-lib/SPVM/Net/SSLeay/X509_VERIFY_PARAM.c
-lib/SPVM/Net/SSLeay/X509_VERIFY_PARAM.config
-lib/SPVM/Net/SSLeay/X509_VERIFY_PARAM.pm
-lib/SPVM/Net/SSLeay/X509_VERIFY_PARAM.spvm
-LICENSE
-Makefile.PL
-MANIFEST			This list of files
-MANIFEST.SKIP
-README.md
-t/basic.t
-t/file/binary-test.file
-t/file/extended-cert.cert.der
-t/file/extended-cert.cert.dump
-t/file/extended-cert.cert.pem
-t/file/extended-cert.certchain.der
-t/file/extended-cert.certchain.enc.p12
-t/file/extended-cert.certchain.p12
-t/file/extended-cert.certchain.pem
-t/file/extended-cert.csr.der
-t/file/extended-cert.csr.pem
-t/file/extended-cert.enc.p12
-t/file/extended-cert.key.der
-t/file/extended-cert.key.enc.der
-t/file/extended-cert.key.enc.pem
-t/file/extended-cert.key.pem
-t/file/extended-cert.p12
-t/file/intermediate-ca.cert.der
-t/file/intermediate-ca.cert.dump
-t/file/intermediate-ca.cert.pem
-t/file/intermediate-ca.certchain.der
-t/file/intermediate-ca.certchain.enc.p12
-t/file/intermediate-ca.certchain.p12
-t/file/intermediate-ca.certchain.pem
-t/file/intermediate-ca.crl.der
-t/file/intermediate-ca.crl.pem
-t/file/intermediate-ca.csr.der
-t/file/intermediate-ca.csr.pem
-t/file/intermediate-ca.enc.p12
-t/file/intermediate-ca.key.der
-t/file/intermediate-ca.key.enc.der
-t/file/intermediate-ca.key.enc.pem
-t/file/intermediate-ca.key.pem
-t/file/intermediate-ca.p12
-t/file/openssl_init_test.conf
-t/file/revoked-cert.cert.der
-t/file/revoked-cert.cert.dump
-t/file/revoked-cert.cert.pem
-t/file/revoked-cert.certchain.der
-t/file/revoked-cert.certchain.enc.p12
-t/file/revoked-cert.certchain.p12
-t/file/revoked-cert.certchain.pem
-t/file/revoked-cert.csr.der
-t/file/revoked-cert.csr.pem
-t/file/revoked-cert.enc.p12
-t/file/revoked-cert.key.der
-t/file/revoked-cert.key.enc.der
-t/file/revoked-cert.key.enc.pem
-t/file/revoked-cert.key.pem
-t/file/revoked-cert.p12
-t/file/root-ca.cert.der
-t/file/root-ca.cert.dump
-t/file/root-ca.cert.pem
-t/file/root-ca.certchain.der
-t/file/root-ca.certchain.enc.p12
-t/file/root-ca.certchain.p12
-t/file/root-ca.certchain.pem
-t/file/root-ca.csr.der
-t/file/root-ca.csr.pem
-t/file/root-ca.enc.p12
-t/file/root-ca.key.der
-t/file/root-ca.key.enc.der
-t/file/root-ca.key.enc.pem
-t/file/root-ca.key.pem
-t/file/root-ca.p12
-t/file/simple-cert.cert.der
-t/file/simple-cert.cert.dump
-t/file/simple-cert.cert.pem
-t/file/simple-cert.certchain.der
-t/file/simple-cert.certchain.enc.p12
-t/file/simple-cert.certchain.p12
-t/file/simple-cert.certchain.pem
-t/file/simple-cert.csr.der
-t/file/simple-cert.csr.pem
-t/file/simple-cert.enc.p12
-t/file/simple-cert.key.der
-t/file/simple-cert.key.enc.der
-t/file/simple-cert.key.enc.pem
-t/file/simple-cert.key.pem
-t/file/simple-cert.p12
-t/file/strange-cert.cert.der
-t/file/strange-cert.cert.dump
-t/file/strange-cert.cert.pem
-t/file/strange-cert.certchain.der
-t/file/strange-cert.certchain.enc.p12
-t/file/strange-cert.certchain.p12
-t/file/strange-cert.certchain.pem
-t/file/strange-cert.csr.der
-t/file/strange-cert.csr.pem
-t/file/strange-cert.enc.p12
-t/file/strange-cert.key.der
-t/file/strange-cert.key.enc.der
-t/file/strange-cert.key.enc.pem
-t/file/strange-cert.key.pem
-t/file/strange-cert.p12
-t/file/verify-ca.cert.der
-t/file/verify-ca.cert.dump
-t/file/verify-ca.cert.pem
-t/file/verify-ca.certchain.der
-t/file/verify-ca.certchain.enc.p12
-t/file/verify-ca.certchain.p12
-t/file/verify-ca.certchain.pem
-t/file/verify-ca.csr.der
-t/file/verify-ca.csr.pem
-t/file/verify-ca.enc.p12
-t/file/verify-ca.key.der
-t/file/verify-ca.key.enc.der
-t/file/verify-ca.key.enc.pem
-t/file/verify-ca.key.pem
-t/file/verify-ca.p12
-t/file/verify-cert.cert.der
-t/file/verify-cert.cert.dump
-t/file/verify-cert.cert.pem
-t/file/verify-cert.certchain.der
-t/file/verify-cert.certchain.enc.p12
-t/file/verify-cert.certchain.p12
-t/file/verify-cert.certchain.pem
-t/file/verify-cert.csr.der
-t/file/verify-cert.csr.pem
-t/file/verify-cert.enc.p12
-t/file/verify-cert.key.der
-t/file/verify-cert.key.enc.der
-t/file/verify-cert.key.enc.pem
-t/file/verify-cert.key.pem
-t/file/verify-cert.p12
-t/file/wildcard-cert.cert.der
-t/file/wildcard-cert.cert.dump
-t/file/wildcard-cert.cert.pem
-t/file/wildcard-cert.certchain.der
-t/file/wildcard-cert.certchain.enc.p12
-t/file/wildcard-cert.certchain.p12
-t/file/wildcard-cert.certchain.pem
-t/file/wildcard-cert.csr.der
-t/file/wildcard-cert.csr.pem
-t/file/wildcard-cert.enc.p12
-t/file/wildcard-cert.key.der
-t/file/wildcard-cert.key.enc.der
-t/file/wildcard-cert.key.enc.pem
-t/file/wildcard-cert.key.pem
-t/file/wildcard-cert.p12
-t/lib/SPVM/TestCase/Net/SSLeay.spvm
-t/lib/SPVM/TestCase/Net/SSLeay/SSL_CTX.spvm
-t/lib/SPVM/TestCase/Net/SSLeay/Util.spvm
-t/OPENSSL.t
-t/SSL_CTX.t
